--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,40 +12,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-14 Fri 15:45]
+#+CAPTION: Clock summary at [2017-07-14 Fri 17:47]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *40:18* |       |      | 100.0 |
+| *Total time*                                                                | *40:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 40:18   |       |      | 100.0 |
-| Active                                                                      |         | 40:18 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:07 |   2.8 |
+| Stories                                                                     | 40:51   |       |      | 100.0 |
+| Active                                                                      |         | 40:51 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:07 |   2.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   1.0 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   3.0 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  10.4 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   2.9 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  10.2 |
 | COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   3.9 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   0.5 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   1.5 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   0.8 |
 | COMPLETED Implement the references chain                                    |         |       | 2:43 |   6.7 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   1.7 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   1.6 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   0.5 |
-| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   2.1 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.7 |
-| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   1.9 |
+| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   2.0 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.6 |
+| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   1.8 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.1 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   1.7 |
-| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.3 |
+| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.2 |
 | COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   1.9 |
-| COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.7 |
-| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  22.3 |
+| COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.6 |
+| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  22.0 |
 | CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   2.2 |
 | CANCELLED Use transformation context in quilt                               |         |       | 0:20 |   0.8 |
 | COMPLETED Create an options validator                                       |         |       | 0:39 |   1.6 |
-| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |  11.3 |
+| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |  11.1 |
 | COMPLETED Fix options test break on windows                                 |         |       | 0:10 |   0.4 |
-| STARTED Move enablement into yarn                                           |         |       | 2:27 |   6.1 |
+| STARTED Move enablement into yarn                                           |         |       | 3:00 |   7.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -600,6 +600,8 @@ windows:
 : C:/projects/dogen/projects/options/tests/knitting_options_validator_tests.cpp(109): error : in "knitting_options_validator_tests/options_with_a_relative_output_directory_are_invalid": exception "validation_error" raised as expected: validation on the raised exception through predicate "c" [C:\projects\dogen\build\output\msvc\Release\projects\options\tests\run_options.tests.vcxproj]
 
 *** STARTED Move enablement into yarn                                 :story:
+    CLOCK: [2017-07-14 Fri 17:38]--[2017-07-14 Fri 17:47] =>  0:09
+    CLOCK: [2017-07-14 Fri 17:13]--[2017-07-14 Fri 17:37] =>  0:24
     CLOCK: [2017-07-14 Fri 15:18]--[2017-07-14 Fri 15:44] =>  0:26
     CLOCK: [2017-07-14 Fri 15:16]--[2017-07-14 Fri 15:17] =>  0:01
     CLOCK: [2017-07-14 Fri 14:51]--[2017-07-14 Fri 15:16] =>  0:25
