--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-14 Fri 20:33]
+#+CAPTION: Clock summary at [2017-07-14 Fri 21:41]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *41:32* |       |      | 100.0 |
+| *Total time*                                                                | *41:54* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 41:32   |       |      | 100.0 |
-| Active                                                                      |         | 41:32 |      | 100.0 |
+| Stories                                                                     | 41:54   |       |      | 100.0 |
+| Active                                                                      |         | 41:54 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:07 |   2.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   1.0 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   2.9 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  10.1 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  10.0 |
 | COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   3.8 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   0.5 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   1.5 |
@@ -32,20 +32,20 @@
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   1.6 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   0.5 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   2.0 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.5 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.4 |
 | COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   1.8 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.1 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   1.7 |
 | COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.2 |
 | COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   1.8 |
-| COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.6 |
-| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  21.7 |
-| CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   2.2 |
+| COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.5 |
+| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  21.5 |
+| CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   2.1 |
 | CANCELLED Use transformation context in quilt                               |         |       | 0:20 |   0.8 |
 | COMPLETED Create an options validator                                       |         |       | 0:39 |   1.6 |
-| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |  11.0 |
+| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |  10.9 |
 | COMPLETED Fix options test break on windows                                 |         |       | 0:10 |   0.4 |
-| STARTED Investigate why gcc builds are slower than clang                    |         |       | 0:41 |   1.6 |
+| COMPLETED Investigate why gcc builds are slower than clang                  |         |       | 1:03 |   2.5 |
 | STARTED Move enablement into yarn                                           |         |       | 3:00 |   7.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -600,10 +600,15 @@ windows:
 : C:/projects/dogen/projects/options/tests/knitting_options_validator_tests.cpp(100): error : in "knitting_options_validator_tests/options_without_a_output_directory_are_invalid": exception "validation_error" raised as expected: validation on the raised exception through predicate "c" [C:\projects\dogen\build\output\msvc\Release\projects\options\tests\run_options.tests.vcxproj]
 : C:/projects/dogen/projects/options/tests/knitting_options_validator_tests.cpp(109): error : in "knitting_options_validator_tests/options_with_a_relative_output_directory_are_invalid": exception "validation_error" raised as expected: validation on the raised exception through predicate "c" [C:\projects\dogen\build\output\msvc\Release\projects\options\tests\run_options.tests.vcxproj]
 
-*** STARTED Investigate why gcc builds are slower than clang          :story:
+*** COMPLETED Investigate why gcc builds are slower than clang        :story:
+    CLOSED: [2017-07-14 Fri 21:40]
+    CLOCK: [2017-07-14 Fri 20:33]--[2017-07-14 Fri 20:55] =>  0:22
     CLOCK: [2017-07-14 Fri 19:51]--[2017-07-14 Fri 20:32] =>  0:41
 
 We seem to take a lot longer to build with GCC in travis vs clang.
+
+Removing the pragma notes seems to have bought us a little bit of
+time, which may be enough for now.
 
 *** STARTED Move enablement into yarn                                 :story:
     CLOCK: [2017-07-14 Fri 17:38]--[2017-07-14 Fri 17:47] =>  0:09
