--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,41 +12,41 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-14 Fri 21:41]
+#+CAPTION: Clock summary at [2017-07-14 Fri 22:29]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *41:54* |       |      | 100.0 |
+| *Total time*                                                                | *42:38* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 41:54   |       |      | 100.0 |
-| Active                                                                      |         | 41:54 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:07 |   2.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   1.0 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   2.9 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  10.0 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   3.8 |
+| Stories                                                                     | 42:38   |       |      | 100.0 |
+| Active                                                                      |         | 42:38 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:07 |   2.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   0.9 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   2.8 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |   9.8 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   3.7 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   0.5 |
-| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   1.5 |
+| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   1.4 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   0.8 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |   6.5 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |   6.4 |
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   1.6 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   0.5 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   2.0 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.4 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.2 |
 | COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   1.8 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.1 |
-| COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   1.7 |
+| COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   1.6 |
 | COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.2 |
 | COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   1.8 |
 | COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.5 |
-| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  21.5 |
+| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  21.1 |
 | CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   2.1 |
 | CANCELLED Use transformation context in quilt                               |         |       | 0:20 |   0.8 |
-| COMPLETED Create an options validator                                       |         |       | 0:39 |   1.6 |
-| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |  10.9 |
+| COMPLETED Create an options validator                                       |         |       | 0:39 |   1.5 |
+| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |  10.7 |
 | COMPLETED Fix options test break on windows                                 |         |       | 0:10 |   0.4 |
 | COMPLETED Investigate why gcc builds are slower than clang                  |         |       | 1:03 |   2.5 |
-| STARTED Move enablement into yarn                                           |         |       | 3:00 |   7.2 |
+| STARTED Move enablement into yarn                                           |         |       | 3:44 |   8.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -611,6 +611,8 @@ Removing the pragma notes seems to have bought us a little bit of
 time, which may be enough for now.
 
 *** STARTED Move enablement into yarn                                 :story:
+    CLOCK: [2017-07-14 Fri 22:13]--[2017-07-14 Fri 22:29] =>  0:16
+    CLOCK: [2017-07-14 Fri 21:44]--[2017-07-14 Fri 22:12] =>  0:28
     CLOCK: [2017-07-14 Fri 17:38]--[2017-07-14 Fri 17:47] =>  0:09
     CLOCK: [2017-07-14 Fri 17:13]--[2017-07-14 Fri 17:37] =>  0:24
     CLOCK: [2017-07-14 Fri 15:18]--[2017-07-14 Fri 15:44] =>  0:26
@@ -638,6 +640,8 @@ Problems:
   across all meta-types.
 - because we do not have element segmentation, the element extensions
   will be disabled.
+- enablement must be done after external transformations so it picks
+  up fabric types.
 
 To do:
 
@@ -711,6 +715,13 @@ ODB level.
 
 Similarly, we should move the ODB databases into yarn and make that a
 ORM-level concept.
+
+*** Rename fabric and formattables                                    :story:
+
+In the long run, we should use proper names for these namespaces:
+
+- fabric is meta-model;
+- formattables houses transformations.
 
 *** Start documenting the theoretical aspects of Dogen                :story:
 
@@ -820,6 +831,16 @@ At present, our C++ wrappers on top of LibXml are using the file based
 interface. We should do in-memory processing of the XML file. Once
 this is in place, we can change the exogenous transformers to use
 strings rather than paths to files.
+
+*** Initialisation of meta-data                                       :story:
+
+At present we are reading meta-data files for every transformation. In
+reality, it makes no sense to allow the meta-data files to change
+dynamically, because the consumers of the meta-data are hard-coded. So
+it would make more sense to treat them as a initialisation step. This
+will make even more sense when we code-generate the types instead of
+using JSON. Then we can hook up the generated code to the
+initialisers.
 
 ** Deprecated
 *** CANCELLED Add description to profile and value templates          :story:
