yarn: drop boolean flag from element traversal visitor concept
Having the include_injected_elements flag in the TraversalVisitor
concept meant we could not use lambdas. Drop it and use an argument
instead.

--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-15 Sat 20:58]
+#+CAPTION: Clock summary at [2017-07-15 Sat 21:14]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *43:41* |       |      | 100.0 |
+| *Total time*                                                                | *43:56* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 43:41   |       |      | 100.0 |
-| Active                                                                      |         | 43:41 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:07 |   2.6 |
+| Stories                                                                     | 43:56   |       |      | 100.0 |
+| Active                                                                      |         | 43:56 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:07 |   2.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   0.9 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   2.7 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |   9.6 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |   9.5 |
 | COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   3.6 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   0.5 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   1.4 |
@@ -32,21 +32,21 @@
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   1.5 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   0.5 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   1.9 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.1 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   8.0 |
 | COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   1.7 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.1 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   1.6 |
 | COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.1 |
-| COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   1.8 |
+| COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   1.7 |
 | COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.4 |
-| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  20.6 |
-| CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   2.1 |
+| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  20.5 |
+| CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   2.0 |
 | CANCELLED Use transformation context in quilt                               |         |       | 0:20 |   0.8 |
 | COMPLETED Create an options validator                                       |         |       | 0:39 |   1.5 |
 | COMPLETED Implement the code-generation chain                               |         |       | 4:33 |  10.4 |
 | COMPLETED Fix options test break on windows                                 |         |       | 0:10 |   0.4 |
 | COMPLETED Investigate why gcc builds are slower than clang                  |         |       | 1:03 |   2.4 |
-| STARTED Move enablement into yarn                                           |         |       | 4:47 |  11.0 |
+| STARTED Move enablement into yarn                                           |         |       | 5:02 |  11.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -611,6 +611,8 @@ Removing the pragma notes seems to have bought us a little bit of
 time, which may be enough for now.
 
 *** STARTED Move enablement into yarn                                 :story:
+    CLOCK: [2017-07-15 Sat 21:09]--[2017-07-15 Sat 21:14] =>  0:05
+    CLOCK: [2017-07-15 Sat 20:58]--[2017-07-15 Sat 21:08] =>  0:10
     CLOCK: [2017-07-15 Sat 20:14]--[2017-07-15 Sat 20:57] =>  0:43
     CLOCK: [2017-07-15 Sat 18:15]--[2017-07-15 Sat 18:35] =>  0:20
     CLOCK: [2017-07-14 Fri 22:13]--[2017-07-14 Fri 22:29] =>  0:16
